# ZZU.Py

./: .gitignore  AGENTS.md  README.md  pyproject.toml  zensical.toml
.github/workflows/: build-docs.yaml  ci.yaml  release.yaml
docs/: index.md  note.md
docs/usage/app/: auth.md
docs/usage/web/: network.md
scripts/: portal.py  test_ecard.py
zzupy/: __init__.py  exception.py  logging.py  utils.py
zzupy/aio/app/: auth.py  ecard.py  interfaces.py
zzupy/aio/app/eas/: undergrad.py
zzupy/aio/web/: network.py
zzupy/app/: auth.py  ecard.py  interfaces.py
zzupy/app/eas/: undergrad.py
zzupy/model/: eas.py  ecard.py  network.py
zzupy/web/: network.py
