[project]
name = "zzupy"
description = "豫见郑大的 Python API 封装 / An API wrapper for Zhengzhou University Mobile Campus written in Python."
authors = [{ name = "Illustar0", email = "me@illustar0.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
dynamic = ["version"]
dependencies = [
    "gmalg>=1.0.6",
    "httpx2>=2.3.0",
    "icalendar>=7.1.2",
    "ifaddr>=0.2.0",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "typing-extensions>=4.12.2",
    "whenever>=0.10.0",
]

[project.optional-dependencies]
develop = [
    "ruff>=0.15.16",
    "ty>=0.0.44",
    "pre-commit>=4.6.0",
    "pyrefly>=0.60.0",
]

docs = [
    "mkdocstrings[python]>=1.0.4",
    "zensical>=0.0.44",
]


[project.urls]
Repository = "https://github.com/Illustar0/ZZU.Py"
Documentation = "https://illustar0.github.io/ZZU.Py"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"